fixes clippy copy problem

--- a/static/style.css
+++ b/static/style.css
@@ -66,12 +66,17 @@ tr:hover .hosts-list {
 }
 .copy-command {
     width: 15px;
+    height: 20px;
     overflow: hidden;
     margin-left: 5px;
     position: relative;
 }
 .clippy {
     opacity: 0;
+    display: none;
+}
+tr:hover .clippy {
+    display: block;
 }
 .connect-link {
     text-transform: uppercase;
